deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: king-preset
  labels:
    app: king-preset
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: king-preset
