deployment/deployment_all_in_one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: king-preset
  namespace: kingfisher-system
  labels:
    app: king-preset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: king-preset
  template:
    metadata:
      labels:
        app: king-preset
    spec:
      containers:
        - name: king-preset
          image: xxxxxxx
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: preset
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: preset
          secret:
            secretName: king-preset
---
apiVersion: v1
kind: Service
metadata:
  name: king-preset
  namespace: kingfisher-system
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: king-preset
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: king-preset
webhooks:
  - name: fix.pod.ip
    clientConfig:
      service:
        name: king-preset
        namespace: kingfisher-system
        path: "/preset/api/v1.10/validate/fixpodip"
      caBundle: ${CA_PEM_B64}
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["apps",""]
        apiVersions: ["v1","v1beta1"]
        resources: ["statefulsets"]
    objectSelector:
      matchLabels:
        fix-pod-ip: enabled
  - name: endpoint.extend.ip
    clientConfig:
      service:
        name: king-preset
        namespace: kingfisher
        path: "/preset/api/v1.10/validate/endpointextendip"
      caBundle: ${CA_PEM_B64}
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["services", "endpoints"]
    objectSelector:
      matchExpressions:
        - key: endpoint-extend
          operator: In
          values: ["endpoint-external-ip", "endpoint-backup-ip"]
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: king-preset
webhooks:
  - name: fix.pod.ip
    clientConfig:
      service:
        name: king-preset
        namespace: kingfisher-system
        path: "/preset/api/v1.10/mutate/fixpodip"
      caBundle: ${CA_PEM_B64}
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["apps", ""]
        apiVersions: ["v1","v1beta1"]
        resources: ["pods"]
    objectSelector:
      matchLabels:
        fix-pod-ip: enabled
  - name: endpoint.extend.ip
    clientConfig:
      service:
        name: king-preset
        namespace: kingfisher
        path: "/preset/api/v1.10/mutate/endpointextendip"
      caBundle: ${CA_PEM_B64}
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["endpoints"]
    objectSelector:
      matchExpressions:
        - key: endpoint-extend
          operator: In
          values: ["endpoint-external-ip", "endpoint-backup-ip"]
