deployment/validatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: king-preset
  labels:
    app: king-preset
webhooks:
  - name: fix.pod.ip
    clientConfig:
      service:
        name: king-preset
        namespace: default
        path: "/preset/api/v1.10/validate/fixpodip"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLSFDFDGDGFlGSUNBVEUtLS0tLQo=
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["apps",""]
        apiVersions: ["v1","v1beta1"]
        resources: ["statefulsets"]
    objectSelector:
      matchLabels:
        fix-pod-ip: enabled
